syntax = "proto3";

package resources.mailer;

import "buf/validate/validate.proto";
import "resources/mailer/email.proto";
import "resources/mailer/message.proto";
import "resources/mailer/settings.proto";
import "resources/mailer/thread.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/mailer;mailer";

message MailerEvent {
  oneof data {
    option (buf.validate.oneof).required = true;

    Email email_update = 1;
    uint64 email_delete = 2;
    EmailSettings email_settings_updated = 3;

    Thread thread_update = 4;
    uint64 thread_delete = 5;

    ThreadState thread_state_update = 6;

    Message message_update = 7;
    uint64 message_delete = 8;
  }
}
